2011-11-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Compile fix for TCB.

2011-11-11  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Avoid conflict with glibc. Rename error to
	error_acl.

2011-11-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml: Document the optional file argument.
	* man/newusers.8.xml: Fix the documentation of the inputs' format.

2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupmod.8.xml: Document that the primary group of users may
	be changed by groupmod -g.

2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c, man/newusers.8.xml: Add --root option.

2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Remove unused variable a.

2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* man/generate_mans.mak: The xml-config files do not depend on the
	Makefile.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c, src/chgpasswd.c, src/chpasswd.c, src/chsh.c,
	src/faillog.c, src/gpasswd.c, src/groupadd.c, src/groupdel.c,
	src/groupmems.c, src/groupmod.c, src/grpconv.c, src/grpunconv.c,
	src/lastlog.c, src/newusers.c, src/passwd.c, src/pwconv.c,
	src/pwunconv.c, src/su.c, src/useradd.c, src/userdel.c,
	src/usermod.c, src/vipw.c: Align and sort options.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/pwck.c, man/pwck.8.xm, src/grpck.c, man/grpck.8.xml:
	Add --root option.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* man/limits.5.xml, libmisc/limits.c: Sort limit identifiers.
	* libmisc/limits.c: Fix support for the K limit identifier.
	* libmisc/limits.c: Add missing default limit for L and U.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c, man/pwck.8.xml: Add support for long options.
	* src/pwck.c, man/pwck.8.xml: Add -h/--help option